prepare release 4.0.0-rc4; fix two more configuration cache incompatibilities